<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yedi.app.fragment.BaseFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <TextView
        android:layout_marginTop="@dimen/space_height"
        android:layout_marginLeft="@dimen/space_height"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/text_box_height"
        android:textSize="@dimen/band_title"
        android:textColor="@color/black"
        android:text="@string/re_yedi"/>
    <com.yedi.app.view.IconTableView
        android:id="@+id/re_yedi_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:verticalSpacing="10dp"
        android:horizontalSpacing="10dp"
        android:background="#ffffffff"
        android:scrollbars="none"
        android:numColumns="3"
        />

        <TextView
            android:layout_marginTop="@dimen/space_height"
            android:layout_marginLeft="@dimen/space_height"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_box_height"
            android:textSize="@dimen/band_title"
            android:textColor="@color/black"
            android:text="@string/re_nostalgic"/>
        <com.yedi.app.view.IconTableView
            android:id="@+id/re_nostalgic_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:verticalSpacing="10dp"
            android:horizontalSpacing="10dp"
            android:background="#ffffffff"
            android:scrollbars="none"
            android:numColumns="3"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_height"></TextView>
        <TextView
            android:layout_marginLeft="@dimen/space_height"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_box_height"
            android:textSize="@dimen/band_title"
            android:textColor="@color/black"
            android:text="@string/re_pregnancy"/>

        <com.yedi.app.view.NoScrollListView
            android:id="@+id/re_pregnancy_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffffff"
            android:divider="@color/transparent"
            android:dividerHeight="10dp"
            android:scrollbars="none">

        </com.yedi.app.view.NoScrollListView>
    </LinearLayout>
    </ScrollView>
</LinearLayout>
