<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yedi.app.fragment.BandListFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.yedi.app.view.LoopViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="150dp">
        </com.yedi.app.view.LoopViewPager>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_height"></TextView>
        <TextView
            android:layout_marginLeft="@dimen/space_height"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_box_height"
            android:textSize="@dimen/band_title"
            android:textColor="@color/black"
            android:text="@string/online_music"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_height"></TextView>
        <com.yedi.app.view.IconTableView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:verticalSpacing="10dp"
            android:horizontalSpacing="10dp"
            android:background="#ffffffff"
            android:scrollbars="none"
            android:numColumns="3"
            android:id="@+id/band_first"
            >

        </com.yedi.app.view.IconTableView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_height"></TextView>
        <TextView
            android:layout_marginLeft="@dimen/space_height"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_box_height"
            android:textSize="@dimen/band_title"
            android:textColor="@color/black"
            android:text="@string/main_band"/>

         <com.yedi.app.view.NoScrollListView
             android:id="@+id/band_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="#ffffffff"
             android:divider="@color/transparent"
             android:dividerHeight="10dp"
             android:scrollbars="none">

         </com.yedi.app.view.NoScrollListView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_height"></TextView>
        <TextView
            android:layout_marginLeft="@dimen/space_height"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_box_height"
            android:textSize="@dimen/band_title"
            android:textColor="@color/black"
            android:text="@string/re_artist"/>

        <com.yedi.app.view.IconTableView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:verticalSpacing="10dp"
            android:horizontalSpacing="10dp"
            android:background="#ffffffff"
            android:scrollbars="none"
            android:numColumns="3"
            android:id="@+id/re_artist"
            />

    </LinearLayout>
    </ScrollView>
</FrameLayout>
